# Assignment02-03

./: CMakeLists.txt  main.c
domain/: offer.c  offer.h
dynamic_array/: dynamic_array.c  dynamic_array.h
repo/: repo_offer.c  repo_offer.h
service/: offer_service.c  offer_service.h
tests/: tests.c  tests.h
ui/: ui.c  ui.h
undo/: Undo-MementoApproach.c  Undo-MementoApproach.h
validation/: offer_validator.c  offer_validator.h
